--- a/index.html
+++ b/index.html
@@ -20,29 +20,27 @@
         <!-- <a href="https://docs.google.com/forms/d/1yKlm4DOBo6uyOg_3aYKvwbSNScP42bhwigFNDnZ_YvU/edit
         " class="button">Register Now</a> -->
        </div> 
-          <img src="./img/1.jpg" alt="">
-          <img src="./img/2.jpg" alt="">
-          <img src="./img/3.jpg" alt="">
-          <img src="./img/4.jpg" alt="">
-           <img src="./img/5.jpg" alt="">
-          <img src="./img/6.jpg" alt="">
-          <img src="./img/7.jpg" alt="">
-          <img src="./img/8.jpg" alt="">
-          <img src="./img/9.jpg" alt="">
-          <img src="./img/10.jpg" alt="">
-          <img src="./img/11.jpg" alt="">
-          <img src="./img/12.jpg" alt="">
-          <img src="./img/13.jpg" alt="">
-          <img src="./img/14.jpg" alt="">
-          <img src="./img/15.jpg" alt="">
-          <img src="./img/16.jpg" alt="">
-          <img src="./img/17.jpg" alt="">
-          <img src="./img/18.jpg" alt="">
-          <img src="./img/19.jpg" alt="">
-          <img src="./img/20.jpg" alt="">
-          <img src="./img/21.jpg" alt="">
-          <img src="./img/22.jpg" alt="">
-
+          <img src="./img/Artboard 1.jpg" alt="">
+          <img src="./img/Artboard 2.jpg" alt="">
+          <img src="./img/Artboard 3.jpg" alt="">
+          <img src="./img/Artboard 4.jpg" alt="">
+           <img src="./img/Artboard 5.jpg" alt="">
+          <img src="./img/Artboard 6.jpg" alt="">
+          <img src="./img/Artboard 7.jpg" alt="">
+          <img src="./img/Artboard 8.jpg" alt="">
+          <img src="./img/Artboard 9.jpg" alt="">
+          <img src="./img/Artboard 10.jpg" alt="">
+          <img src="./img/Artboard 11.jpg" alt="">
+          <img src="./img/Artboard 12.jpg" alt="">
+          <img src="./img/Artboard 13.jpg" alt="">
+          <img src="./img/Artboard 14.jpg" alt="">
+          <img src="./img/Artboard 15.jpg" alt="">
+          <img src="./img/Artboard 16.jpg" alt="">
+          <img src="./img/Artboard 17.jpg" alt="">
+          <img src="./img/Artboard 18.jpg" alt="">
+          <img src="./img/Artboard 19.jpg" alt="">
+          <img src="./img/Artboard 20.jpg" alt="">
+          <img src="./img/Artboard 21.jpg" alt="">
 
 
       </div>
